ci: remove extra race ci tests (#94)
* remove extra race ci tests

* go change to test ci

* fix ci

* test without -r

* test with -r

* change -r to -race

Co-authored-by: colin axnér <25233464+colin-axner@users.noreply.github.com>

--- a/sei-ibc-go/Makefile
+++ b/sei-ibc-go/Makefile
@@ -216,10 +216,10 @@ TEST_TARGETS := test-unit test-unit-amino test-unit-proto test-ledger-mock test-
 # Test runs-specific rules. To add a new test target, just add
 # a new rule, customise ARGS or TEST_PACKAGES ad libitum, and
 # append the new rule to the TEST_TARGETS list.
-test-unit: ARGS=-tags='cgo ledger test_ledger_mock norace'
-test-unit-amino: ARGS=-tags='ledger test_ledger_mock test_amino norace'
-test-ledger: ARGS=-tags='cgo ledger norace'
-test-ledger-mock: ARGS=-tags='ledger test_ledger_mock norace'
+test-unit: ARGS=-tags='cgo ledger test_ledger_mock'
+test-unit-amino: ARGS=-tags='ledger test_ledger_mock test_amino'
+test-ledger: ARGS=-tags='cgo ledger'
+test-ledger-mock: ARGS=-tags='ledger test_ledger_mock'
 test-race: ARGS=-race -tags='cgo ledger test_ledger_mock'
 test-race: TEST_PACKAGES=$(PACKAGES_NOSIMULATION)
 $(TEST_TARGETS): run-tests
@@ -227,8 +227,8 @@ $(TEST_TARGETS): run-tests
 # check-* compiles and collects tests without running them
 # note: go test -c doesn't support multiple packages yet (https://github.com/golang/go/issues/15513)
 CHECK_TEST_TARGETS := check-test-unit check-test-unit-amino
-check-test-unit: ARGS=-tags='cgo ledger test_ledger_mock norace'
-check-test-unit-amino: ARGS=-tags='ledger test_ledger_mock test_amino norace'
+check-test-unit: ARGS=-tags='cgo ledger test_ledger_mock'
+check-test-unit-amino: ARGS=-tags='ledger test_ledger_mock test_amino'
 $(CHECK_TEST_TARGETS): EXTRA_ARGS=-run=none
 $(CHECK_TEST_TARGETS): run-tests
 
