IBC Testing Package v2 (#114)
* create global time under coordinator

* fix test

* various fixes to testing package

* initial design work for testing package v2

* add channel support

* fix handshake endpoint functions, SetupNew now works

* fix build

* update simapp func

* add configs

* fix tests, remove unnecessary code

* fix tests

* add send, recv, ack funcs for endpoint, add lots of todos

* apply review comments

* update all light clients to use testing package v2

* refactor handle recv in msg server

* finish msg server tests

* ibc testing part 2 (#127)

* remove old testing code, update light client tests, update part of transfer tests

* fix transfer tests

* remove old code from testing package

* refactor 02-client tests

* refactor 03-connection

* all tests passing

* self review fixes

* ignore testing package for codecov

* Update modules/core/03-connection/keeper/verify_test.go

* IBC Testing Refactor Part 3 (#129)

* IBCKeeper reference into an interface function

* move to testing app interface wip

* add rest of interface functions, fix tests

* finish making testing app modular

* ibc testing refactor part 4 (#133)

* update README

* test modularity with transfer, update README, minor fixes

--- a/sei-ibc-go/.codecov.yml
+++ b/sei-ibc-go/.codecov.yml
@@ -53,4 +53,5 @@ ignore:
   - "modules/**/**/**/*.pb.go"
   - "modules/**/**/**/*.pb.gw.go"
   - "modules/**/**/**/test_common.go"
+  - "testing/"
   - "scripts/"
