fix: ibc build docs (#361)
* initial fix commit

* add release v1.0.1 to versions

* improvements for docs website

* add new version

* address review comments

Co-authored-by: Carlos Rodriguez <crodveg@gmail.com>
Co-authored-by: colin axnér <25233464+colin-axner@users.noreply.github.com>

--- a/sei-ibc-go/docs/package.json
+++ b/sei-ibc-go/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "IBC-GO Documentation",
+  "description": "IBC-Go Documentation",
   "main": "index.js",
   "scripts": {
     "serve": "trap 'exit 0' SIGINT; vuepress dev --no-cache",
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "vuepress-theme-cosmos": "^1.0.182"
+  },
+  "devDependencies": {
+    "watchpack": "^2.2.0"
   }
 }
