fix broken links (#415)
* fix for a large portion of the broken links and adding config file for the markdown link checker

* modify link checker yaml to use config file

* fix link checker yaml

* fix some more links and the path to the config file for the markdown link checker

* fix some more dead links

* tweak markdown link checker configuration and remove deprecated section from docs

* address review comments

* fix url for png

Co-authored-by: Carlos Rodriguez <crodveg@gmail.com>

--- a/sei-ibc-go/.github/workflows/link-check.yml
+++ b/sei-ibc-go/.github/workflows/link-check.yml
@@ -6,3 +6,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      with:
+        config-file: '.github/workflows/link-check-config.json'
