proto: fix for reflection  (#583)
* migrate to v1 buf

* remove confio

* update docker buf image version to fix make proto-all

* move proofs outside confio

* regenerate proto

Co-authored-by: Marko Baricevic <markobaricevic3778@gmail.com>
Co-authored-by: Colin Axnér <25233464+colin-axner@users.noreply.github.com>

--- a/sei-ibc-go/Makefile
+++ b/sei-ibc-go/Makefile
@@ -11,7 +11,7 @@ SIMAPP = ./testing/simapp
 MOCKS_DIR = $(CURDIR)/tests/mocks
 HTTPS_GIT := https://github.com/cosmos/ibc-go.git
 DOCKER := $(shell which docker)
-DOCKER_BUF := $(DOCKER) run --rm -v $(CURDIR):/workspace --workdir /workspace bufbuild/buf
+DOCKER_BUF := $(DOCKER) run --rm -v $(CURDIR):/workspace --workdir /workspace bufbuild/buf:1.0.0-rc8
 
 export GO111MODULE = on
 
