Feature: Interchain accounts v1 (#380)
* migrate ibc-account module to ibc-go

* Add @seantking to CODEOWNERS for interchain accounts module

* rename ibc-account -> interchain-accounts (#280)

* rename ibc-account -> interchain-accounts

* fix codeowner file

* Integrate ICA into testing package, add simple keeper tests (#282)

* add ica to simapp

* add simple keeper tests

* Add interchain account OnChanOpenInit and InitInterchainAccount tests (#287)

* add OnChanOpenInit test

* add InitInterchainAccount test

* Update modules/apps/27-interchain-accounts/keeper/relay.go

* feat: ica proto (#305)

* feat: adding proto files for interchain accounts & updating references of IBCAccount -> InterchainAccount

* doc: updating comments

* docs: update comment

* fix: updating proto yaml, query name, query params, comments

* ICA OnChanOpenTry update + tests (#299)

* update OnChanOpenTry to match ICS specs

* write OnChanOpenTry and OnChanOpenAck tests

* update comment

* test: adding test for OnChanOpenConfirm (#312)

* fix: updating port-id & fixing OnChanOpenInit bug (#321)

* fix: updating port-id & fixing OnChanOpenInit bug

* Update modules/apps/27-interchain-accounts/keeper/handshake.go

Co-authored-by: colin axnér <25233464+colin-axner@users.noreply.github.com>

* Add counterparty port ID to controller portID (#319)

* refactor! move GeneratePortID to types, add counterpartyConnection sequence

change all PortId -> PortID
move GeneratePortID to types package
add counterparty connection sequence argument
utilize connectiontypes connectionID parsing function

* refactor! use counterparty portID in interchain account address gRPC

Remove existing args from gRPC request for interchain account address
Use counterparty portID

* tests add generate port id tests

* apply self-review fixes

* test: check active channel is correct (#324)

* test: check active channel is correct

* test: adding ver

--- a/sei-ibc-go/.github/CODEOWNERS
+++ b/sei-ibc-go/.github/CODEOWNERS
@@ -28,5 +28,5 @@
 
 # CODEOWNERS for interchain-accounts module
 
-/modules/apps/27-interchain-accounts/ @seantking @colin-axner @AdityaSripal
-/proto/applications/interchain_accounts/ @seantking @colin-axner @AdityaSripal
+/modules/apps/27-interchain-accounts/ @seantking @colin-axner @AdityaSripal @damiannolan
+/proto/applications/interchain_accounts/ @seantking @colin-axner @AdityaSripal @damiannolan
