--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -25,3 +25,4 @@ jobs:
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: latest
+          args: --timeout 10m0s
