Multi-contract load test

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ c.out
 
 # fuzz test data
 **/testdata/fuzz/**
+
+# loadtest contracts build artifact
+loadtest/contracts/**/artifacts/
+loadtest/contracts/**/target/
+loadtest/contracts/**.json
