--- a/loadtest/constant_load_config.json
+++ b/loadtest/constant_load_config.json
@@ -1,7 +1,7 @@
 {
-    "batch_size": 1,
+    "batch_size": 2,
     "chain_id": "sei-loadtest-testnet",
-    "orders_per_block": 1,
+    "orders_per_block": 4,
     "rounds": 1,
     "price_distribution": {
         "min": "45",
@@ -17,6 +17,7 @@
         "limit_order_percentage": "0.2",
         "market_order_percentage": "0.8"
     },
+    "const_load_interval": 10,
     "message_type": "basic",
     "contract_distribution": [
         {
