update msg distribution json in config

--- a/loadtest/config.json
+++ b/loadtest/config.json
@@ -14,11 +14,15 @@
         "number_of_distinct_values": 20
     },
     "message_type_distribution": {
-        "limit_order_percentage": "0.2",
-        "market_order_percentage": "0.8",
-        "delegate_percentage": "0.5",
-        "undelegate_percentage": "0.25",
-        "begin_redelegate_percentage": "0.25"
+        "dex": {
+            "limit_order_percentage": "0.2",
+            "market_order_percentage": "0.8"
+        },
+        "staking": {
+            "delegate_percentage": "0.5",
+            "undelegate_percentage": "0.25",
+            "begin_redelegate_percentage": "0.25"
+        }
     },
     "message_type": "staking",
     "contract_distribution": [
