Add test coverage report to CI (#437)
* Add test coverage report to CI

* Fix syntax

Co-authored-by: Cyson <cyson@Cysons-MBP.attlocal.net>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,28 @@ jobs:
 
     - name: Test
       run: python3 runtests.py
+
+    - run: go install github.com/axw/gocov/gocov@latest
+    - run: go install github.com/AlekSi/gocov-xml@latest
+
+    - name: Test coverage report
+      run: go test ./...  -coverprofile=cover.out
+    - run: gocov convert cover.out | gocov-xml > coverage.xml
+      
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: coverage.xml
+        badge: true
+        format: 'markdown'
+        output: 'both'
+
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: code-coverage-results.md
+
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
