Simplify the structure and fix bug

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     environment:
       - ID=0
     volumes:
-      - ./build:/sei-chain:Z
+      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
+      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
+      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
     networks:
       localnet:
         ipv4_address: 192.168.10.2
@@ -22,7 +24,9 @@ services:
     environment:
       - ID=1
     volumes:
-      - ./build:/sei-chain:Z
+      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
+      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
+      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
     networks:
       localnet:
         ipv4_address: 192.168.10.3
@@ -35,7 +39,9 @@ services:
     ports:
       - "26661-26662:26656-26657"
     volumes:
-      - ./build:/sei-chain:Z
+      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
+      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
+      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
     networks:
       localnet:
         ipv4_address: 192.168.10.4
@@ -48,7 +54,9 @@ services:
     ports:
       - "26663-26664:26656-26657"
     volumes:
-      - ./build:/sei-chain:Z
+      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
+      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
+      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
     networks:
       localnet:
         ipv4_address: 192.168.10.5
