--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ loadtest/contracts/**/target/
 loadtest/contracts/**.json
 
 loadtest_results.txt
+
+# nitro-replayer
+nitro-replayer/target
+nitro-replayer/Cargo.lock
