--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,61 +5,65 @@ services:
     container_name: sei-node0
     image: "sei-chain/localnode"
     ports:
-      - "26656-26657:26656-26657"
+      - "26656-26658:26656-26658"
     environment:
       - ID=0
+      - NUM_ACCOUNTS
+      - SKIP_BUILD
     volumes:
-      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
-      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
-      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
+      - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
+      - "${GO_PKG_PATH}/mod:/root/go/pkg/mod:Z"
     networks:
       localnet:
-        ipv4_address: 192.168.10.2
+        ipv4_address: 192.168.10.10
 
   node1:
     container_name: sei-node1
     image: "sei-chain/localnode"
     ports:
-      - "26659-26660:26656-26657"
+      - "26659-26661:26656-26658"
     environment:
       - ID=1
+      - NUM_ACCOUNTS
+      - SKIP_BUILD
     volumes:
-      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
-      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
-      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
+      - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
+      - "${GO_PKG_PATH}/mod:/root/go/pkg/mod:Z"
     networks:
       localnet:
-        ipv4_address: 192.168.10.3
+        ipv4_address: 192.168.10.11
 
   node2:
     container_name: sei-node2
     image: "sei-chain/localnode"
     environment:
       - ID=2
+      - NUM_ACCOUNTS
+      - SKIP_BUILD
     ports:
-      - "26661-26662:26656-26657"
+      - "26662-26664:26656-26658"
     volumes:
-      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
-      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
-      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
+      - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
+      - "${GO_PKG_PATH}/mod:/root/go/pkg/mod:Z"
     networks:
       localnet:
-        ipv4_address: 192.168.10.4
+        ipv4_address: 192.168.10.12
 
   node3:
     container_name: sei-node3
     image: "sei-chain/localnode"
     environment:
       - ID=3
+      - NUM_ACCOUNTS
+      - SKIP_BUILD
     ports:
-      - "26663-26664:26656-26657"
+      - "26665-26667:26656-26658"
     volumes:
-      - "${PROJECT_HOME}/build:/sei-protocol/sei-chain/build:Z"
-      - "${PROJECT_HOME}/x/nitro:${PROJECT_HOME}/x/nitro:Z"
-      - "${GO_PKG_PATH}/mod:${GO_PKG_PATH}/mod:Z"
+      - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
+      - "${GO_PKG_PATH}/mod:/root/go/pkg/mod:Z"
     networks:
       localnet:
-        ipv4_address: 192.168.10.5
+        ipv4_address: 192.168.10.13
 
 networks:
   localnet:
@@ -67,5 +71,4 @@ networks:
     ipam:
       driver: default
       config:
-        -
-          subnet: 192.168.10.0/16
+        - subnet: 192.168.10.0/24
