Use contract rent to decide sudo call gas limit

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ loadtest_results.txt
 # nitro-replayer
 nitro-replayer/target
 nitro-replayer/Cargo.lock
+# nitro mac artifact
+x/nitro/replay/libnitro_replayer.dylib
