--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,15 +27,13 @@ jobs:
           go-version: 1.18
 
       - name: Start 4 node docker cluster
-        run: |
-          make clean && make docker-cluster-start &
-          sleep 360
+        run: make clean && make docker-cluster-start &
 
       - name: Wait for docker cluster to start
         run: |
           until [ $(cat build/generated/launch.complete |wc -l) = 4 ]
           do
-            sleep 5
+            sleep 10
           done
 
       - name: Verify there are 4 validators running
@@ -44,7 +42,6 @@ jobs:
           if [[ "$NUM_VALIDATORS" -eq 4 ]];
           then
             echo "Number validators is correct: $NUM_VALIDATORS"
-          fi
           else
             exit 1
           fi
