Fix if condition

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -50,10 +50,10 @@ jobs:
         run: |
           HEIGHT_1=$(docker exec -i sei-node0 build/seid status |jq -r .SyncInfo.latest_block_height)
           echo $HEIGHT_1
-          sleep 30
+          sleep 15
           HEIGHT_2=$(docker exec -i sei-node0 build/seid status |jq -r .SyncInfo.latest_block_height)
           echo $HEIGHT_2
-          if [ "$HEIGHT_1" -le "$HEIGHT_2" ];
+          if [ "$HEIGHT_1" -ge "$HEIGHT_2" ];
           then
             exit 1
           fi
