--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,7 +27,7 @@ jobs:
           go-version: 1.18
 
       - name: Start 4 node docker cluster
-        run: make clean && make docker-cluster-start
+        run: make clean && make docker-cluster-start &
 
       - name: Wait for docker cluster to start
         run: |
