--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ nitro-replayer/target
 nitro-replayer/Cargo.lock
 # nitro mac artifact
 x/nitro/replay/libnitro_replayer.dylib
+
+# parallelization test build artifact
+parallelization/**/artifacts/
+parallelization/**/target/
+parallelization/**/Cargo.lock
