[ACL] modify WASM dependency proto for partitioning (#128)
## Describe your changes and provide context
This PR replaces `WasmDependencyMapping`'s old `access_ops` field with
three new fields:
- `base_access_ops`: a list of access operations common to all message
types
- `query_access_ops`: a list of lists of access operations per query
message type
- `execute_access_ops`: a list of lists of access operations per execute
message type

This PR also made two other changes:
- Added a separate `GetRawWasmDependencyMapping` method for retrieving
the proto value as-is without populating any data. The original
`GetWasmDependencyMapping` now always populate data and return just the
populated access op list.
- Added a access op merging utility that 1. reduce the list to default
synchronous ops if either side if synchronous 2. dedupe COMMIT ops
## Testing performed to validate your change
unit tests

--- a/sei-cosmos/x/accesscontrol/examples/update-wasm-dependency-mapping-proposal.json
+++ b/sei-cosmos/x/accesscontrol/examples/update-wasm-dependency-mapping-proposal.json
@@ -6,7 +6,7 @@
     "wasm_dependency_mapping":
         {
           "enabled": true,
-          "access_ops": [
+          "base_access_ops": [
             {
               "operation": {
                 "access_type": "UNKNOWN",
@@ -22,6 +22,36 @@
                 "identifier_template": "*"
               },
               "selector_type": "NONE"
+            }
+          ],
+          "query_access_ops": [
+            {
+              "message_name": "query_something",
+              "wasm_operations": [
+                {
+                  "operation": {
+                    "access_type": "READ",
+                    "resource_type": "KV_WASM",
+                    "identifier_template": "*"
+                  },
+                  "selector_type": "NONE"
+                }
+              ]
+            }
+          ],
+          "execute_access_ops": [
+            {
+              "message_name": "execute_something",
+              "wasm_operations": [
+                {
+                  "operation": {
+                    "access_type": "WRITE",
+                    "resource_type": "KV_WASM",
+                    "identifier_template": "*"
+                  },
+                  "selector_type": "NONE"
+                }
+              ]
             }
           ]
         }
