Fix git checkout for describe

--- a/.github/workflows/upload-artifact.yml
+++ b/.github/workflows/upload-artifact.yml
@@ -19,6 +19,8 @@ jobs:
       REPO_NAME: ${{ github.event.repository.name }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v2
