--- a/loadtest/config.json
+++ b/loadtest/config.json
@@ -1,4 +1,5 @@
 {
+    "grpc_endpoint": "127.0.0.1:9090",
     "msgs_per_tx": 10,
     "chain_id": "sei-loadtest-testnet",
     "txs_per_block": 400,
