--- a/docker/localnode/Dockerfile
+++ b/docker/localnode/Dockerfile
@@ -21,3 +21,4 @@ COPY scripts/step2_genesis.sh /usr/bin/genesis.sh
 COPY scripts/step3_add_validator_to_genesis.sh /usr/bin/add_validator_to_gensis.sh
 COPY scripts/step4_persistent_peers.sh /usr/bin/persistent_peers.sh
 COPY scripts/step5_start_sei.sh /usr/bin/start_sei.sh
+COPY scripts/step6_start_price_feeder.sh /usr/bin/start_price_feeder.sh
