Remove Terra and Luna references

--- a/oracle/.env
+++ b/oracle/.env
@@ -4,8 +4,8 @@ CHAIN_ID="sei-chain"
 # Cron tab for how frequently prices will be posted (ex: 10 seconds)
 CRONTAB="*/10 * * * * *"
 
-# List of markets the oracle will post prices for, against ust 
-MARKET_IDS="btc,luna,btc,eth,sol,osmo"
+# List of markets the oracle will post prices for, against ust
+MARKET_IDS="btc,btc,eth,sol,osmo"
 
 # RPC of tendermint node
 CHAIN_RPC="http://localhost:26657"
