--- a/docker/localnode/Dockerfile
+++ b/docker/localnode/Dockerfile
@@ -1,13 +1,14 @@
 FROM ubuntu:latest
 RUN apt-get update && \
-    apt-get install -y make git golang jq python3
+    apt-get install -y make git golang jq python3 curl vim
 RUN rm -rf build/generated
 
 VOLUME [ "/sei-protocol" ]
 VOLUME [ "/root/go/pkg/mod" ]
+
 WORKDIR /sei-protocol/sei-chain
 
-EXPOSE 26656 26657 26658
+EXPOSE 26656 26657 26658 9090 9091 7171
 
 CMD ["/usr/bin/deploy.sh"]
 
@@ -20,3 +21,4 @@ COPY scripts/step2_genesis.sh /usr/bin/genesis.sh
 COPY scripts/step3_add_validator_to_genesis.sh /usr/bin/add_validator_to_gensis.sh
 COPY scripts/step4_persistent_peers.sh /usr/bin/persistent_peers.sh
 COPY scripts/step5_start_sei.sh /usr/bin/start_sei.sh
+COPY scripts/step6_start_price_feeder.sh /usr/bin/start_price_feeder.sh
