--- a/oracle/price-feeder/config.example.toml
+++ b/oracle/price-feeder/config.example.toml
@@ -55,7 +55,7 @@ enable_service_label = true
 enabled = true
 global_labels = [["chain-id", "sei-chain"]]
 service_name = "price-feeder"
-type = "prometheus"
+prometheus_retention = 60
 
 [[provider_endpoints]]
 name = "binance"
