fix example config to have proper chain_id label

--- a/oracle/price-feeder/config.example.toml
+++ b/oracle/price-feeder/config.example.toml
@@ -53,7 +53,7 @@ enable_hostname = true
 enable_hostname_label = true
 enable_service_label = true
 enabled = true
-global_labels = [["chain-id", "sei-chain"]]
+global_labels = [["chain_id", "sei-chain"]]
 service_name = "price-feeder"
 prometheus_retention = 60
 
