--- a/loadtest/config.json
+++ b/loadtest/config.json
@@ -30,7 +30,7 @@
     },
     "constant": true,
     "loadtest_interval": 600,
-    "message_type": "bank,dex,tokenfactory,staking,failure_dex_malformed,failure_dex_invalid",
+    "message_type": "bank,dex,tokenfactory,staking,failure_dex_malformed,failure_dex_invalid,collect_rewards,distribute_rewards",
     "run_oracle": false,
     "metrics_port": 9695,
     "wasm_msg_types": {
