Fix loadtest fee config

--- a/loadtest/config.json
+++ b/loadtest/config.json
@@ -20,15 +20,15 @@
     "message_configs": {
       "default": {
         "gas": 3000000,
-        "fees": 50000
+        "fee": 50000
       },
       "collect_rewards": {
         "gas": 10000000,
-        "fees": 1000000
+        "fee": 1000000
       },
       "distribute_rewards": {
         "gas": 10000000,
-        "fees": 1000000
+        "fee": 1000000
       }
     },
     "message_type_distribution": {
