--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,7 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v3
