[Bug Fix] Fix state sync stuck in infinite loop discovering the next bad peer (#122)
* Fix state sync Inifinite Loop or stuck on one single bad peers

* Add more logs

* Suprress some logs

* Add logs for backward verification

* Fix comment

* Fix comment

* Fix race condition

* fix mod vs divide

* Add logger for peer manager

* Add logger

* Fix logger

* Add unit test

* Fix more unit tests

* Fix more unit test

* Fix some flaky test

* Extend test timeout

* Split more

* Fix CI

---------

Co-authored-by: Yiming Zang <yzang@twitter.com>

--- a/sei-tendermint/.github/workflows/tests.yml
+++ b/sei-tendermint/.github/workflows/tests.yml
@@ -14,11 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        part: ["00", "01", "02", "03", "04", "05"]
+        part: ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09"]
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.18"
+          go-version: "1.19"
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
         with:
@@ -30,5 +30,6 @@ jobs:
             Makefile
       - name: Run Go Tests
         run: |
-          make test-group-${{ matrix.part }} NUM_SPLIT=6
+          NUM_SPLIT=10
+          make test-group-${{matrix.part}} NUM_SPLIT=10
         if: env.GIT_DIFF
