--- a/sei-cosmos/.github/workflows/test.yml
+++ b/sei-cosmos/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
           go-version: 1.19
       - name: Create a file with all core Cosmos SDK pkgs
         run: go list ./... > pkgs.txt
-      - name: Split pkgs into 4 files
-        run: split -d -n l/4 pkgs.txt pkgs.txt.part.
+      - name: Split pkgs into 10 files
+        run: split -d -n l/10 pkgs.txt pkgs.txt.part.
       # cache multiple
       - uses: actions/upload-artifact@v3
         with:
@@ -43,6 +43,30 @@ jobs:
         with:
           name: "${{ github.sha }}-03"
           path: ./pkgs.txt.part.03
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-04"
+          path: ./pkgs.txt.part.04
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-05"
+          path: ./pkgs.txt.part.05
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-06"
+          path: ./pkgs.txt.part.06
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-07"
+          path: ./pkgs.txt.part.07
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-08"
+          path: ./pkgs.txt.part.08
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "${{ github.sha }}-09"
+          path: ./pkgs.txt.part.09
 
   tests:
     runs-on: ubuntu-latest
@@ -50,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        part: ["00", "01", "02", "03"]
+        part: ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
