--- a/oracle/price-feeder/config.example.toml
+++ b/oracle/price-feeder/config.example.toml
@@ -14,6 +14,36 @@ base = "USDT"
 threshold = "2"
 
 [[currency_pairs]]
+base = "ETH"
+chain_denom = "ueth"
+providers = [
+  "huobi",
+  "kraken",
+  "coinbase",
+]
+quote = "USD"
+
+[[currency_pairs]]
+base = "BTC"
+chain_denom = "ubtc"
+providers = [
+  "huobi",
+  "kraken",
+  "coinbase",
+]
+quote = "USD"
+
+[[currency_pairs]]
+base = "SOL"
+chain_denom = "usei"
+providers = [
+  "huobi",
+  "kraken",
+  "coinbase",
+]
+quote = "USD"
+
+[[currency_pairs]]
 base = "ATOM"
 chain_denom = "uatom"
 providers = [
@@ -24,8 +54,8 @@ providers = [
 quote = "USD"
 
 [[currency_pairs]]
-base = "ETH"
-chain_denom = "ueth"
+base = "USDT"
+chain_denom = "factory/sei1jdppe6fnj2q7hjsepty5crxtrryzhuqsjrj95y/uust2"
 providers = [
   "huobi",
   "kraken",
@@ -61,6 +91,21 @@ prometheus_retention = 60
 name = "binance"
 rest = "https://api1.binance.com"
 websocket = "stream.binance.com:9443"
+
+[[provider_endpoints]]
+name = "coinbase"
+rest = "https://api.exchange.coinbase.com"
+websocket = "ws-feed.exchange.coinbase.com"
+
+[[provider_endpoints]]
+name = "huobi"
+rest = "https://api.huobi.pro"
+websocket = "api-aws.huobi.pro"
+
+[[provider_endpoints]]
+name = "kraken"
+rest = "https://api.kraken.com"
+websocket = "ws.kraken.com"
 
 # [[healthchecks]]
 # url = "https://hc-ping.com/HEALTHCHECK-UUID"
